[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffie-hellman-demo"
version = "0.1.0"
description = "A simple Diffie-Hellman key exchange demonstration"
readme = "README.md"
authors = [
	{ name = "Thomas Dang", email = "mdan0038@student.monash.edu" }
]
requires-python = ">=3.9"
dependencies = ["sympy (>=1.14.0,<2.0.0)"]

[tool.setuptools.packages.find]
where = ["src"]
