[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffie-hellman-demo"
version = "0.1.0"
description = "A simple Diffie-Hellman key exchange demonstration"
readme = "README.md"
authors = [
	{ name = "Thomas Dang", email = "mdan0038@student.monash.edu" }
]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "diffie-hellman-demo"
version = "0.1.0"
description = "A simple Diffie-Hellman key exchange demonstration"
authors = ["Thomas Dang <mdan0038@student.monash.edu>"]

[tool.poetry.dependencies]
python = ">=3.9"